# cityhash

./: .clang-format  CMakeLists.txt  README.md  cityhash.code-workspace  coverage.cmake  sanitizer.cmake
.cmake/: sanitizer.cmake
.github/workflows/: codeQL.yml  coverage.yml  sanitizer.yml  sanitizer_clang14.yml  sanitizer_gcc12.yml  sanitizer_msvc.yml  ubuntu_clang14_x86-64.yml  ubuntu_clang_x86-64.yml  ubuntu_clang_x86-64_sanitizer.yml  ubuntu_gcc12_x86-64.yml  ubuntu_gcc_x86-64.yml  windows.yml  windows_cl_x86-64.yml  windows_cl_x86-64_sanitizer.yml  windows_clang_cl_2022_x86-64.yml  windows_clang_x86-64.yml  windows_mingw_64.yml  windows_mingw_x86_64.yml  windows_msvc_2022_x86-64.yml  windows_wasm.yml
src/: CMakeLists.txt  city.cc
src/cityhash/: city.h  citycrc.h
test/: CMakeLists.txt  hash_128.cpp  hash_256.cpp  hash_32.cpp  hash_64.cpp  main.cpp  precompiled.h
